<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_marginStart="16dp"
                android:layout_width="56dp"
                android:layout_height="56dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_prev_month"
                    android:padding="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_gravity="center"
                    app:tint="@color/aws_green"
                    android:src="@drawable/chevron_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <TextView
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/tv_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:layout_marginEnd="16dp"
                android:layout_width="56dp"
                android:layout_height="56dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_next_month"
                    android:padding="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_gravity="center"
                    app:tint="@color/aws_green"
                    android:src="@drawable/chevron_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:minHeight="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:weightSum="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:gravity="center"
                android:maxLength="3"
                android:text="@string/sunday"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:gravity="center"
                android:maxLength="3"
                android:text="@string/monday"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv3"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:gravity="center"
                android:maxLength="3"
                android:text="@string/tuesday"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv4"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:gravity="center"
                android:maxLength="3"
                android:text="@string/wednesday"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv5"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:gravity="center"
                android:maxLength="3"
                android:text="@string/thursday"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv6"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:gravity="center"
                android:maxLength="3"
                android:text="@string/friday"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv7"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:gravity="center"
                android:maxLength="3"
                android:text="@string/saturday"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginStart="16dp"
            android:overScrollMode="never"
            android:layout_marginEnd="16dp"
            android:id="@+id/rv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center"
                android:background="@color/aws_blue"
                android:minHeight="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_select_date"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:text="@string/select_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/fr_select_date"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="32dp" />
    </LinearLayout>
</LinearLayout>