<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="56dp">

            <TextView
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/tv_today_task"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/today_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:overScrollMode="never"
            android:id="@+id/rv_today_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/ln_no_task"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="16dp"
            app:tint="@color/aws_green"
            android:src="@drawable/ic_file_text"
            android:layout_width="90dp"
            android:layout_height="90dp" />

        <TextView
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:id="@+id/tv_dont_have_task"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/dont_have_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:text="@string/sub_dont_have_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/aws_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:paddingEnd="32dp"
                android:paddingStart="16dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        app:tint="@android:color/white"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </FrameLayout>

                <TextView
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:id="@+id/tv_btn_add_task"
                    android:textColor="@android:color/white"
                    android:text="@string/add_new_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <FrameLayout
                android:background="?attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="48dp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>