<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/div_top_nested_scroll_view"
                android:layout_width="0dp"
                android:layout_height="72dp" />

            <EditText
                android:inputType="textPersonName"
                android:paddingBottom="4dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:id="@+id/edt_task_title"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:paddingTop="10dp"
                android:hint="@string/title"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:id="@+id/edt_description"
                android:paddingTop="4dp"
                android:hint="@string/description"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:paddingBottom="10dp"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/ln_card_1"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="16dp"
                    android:layout_height="0dp" />

                <androidx.cardview.widget.CardView
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp"
                    android:id="@+id/card_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:background="@drawable/background_unselected_category"
                        android:gravity="center_vertical"
                        android:id="@+id/ln_card_date"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <FrameLayout
                            android:layout_width="56dp"
                            android:layout_height="56dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/img_card_date"
                                android:src="@drawable/ic_calendar"
                                app:tint="@color/aws_green"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </FrameLayout>

                        <TextView
                            android:id="@+id/tv1"
                            android:layout_marginTop="8dp"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/date_task"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tv_date_task"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/fr_card_date"
                        android:background="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="16dp"
                    android:layout_height="0dp" />

                <androidx.cardview.widget.CardView
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp"
                    android:id="@+id/card_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:background="@drawable/background_unselected_category"
                        android:gravity="center_vertical"
                        android:id="@+id/ln_card_category"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <FrameLayout
                            android:layout_width="56dp"
                            android:layout_height="56dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/img_card_category"
                                android:src="@drawable/ic_bookmark"
                                app:tint="@color/aws_green"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </FrameLayout>

                        <TextView
                            android:id="@+id/tv2"
                            android:layout_marginTop="8dp"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/category_task"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tv_category"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/no_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/fr_card_category"
                        android:background="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="16dp"
                    android:layout_height="0dp" />

                <androidx.cardview.widget.CardView
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp"
                    android:id="@+id/card_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:background="@drawable/background_unselected_category"
                        android:gravity="center_vertical"
                        android:id="@+id/ln_card_subject"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <FrameLayout
                            android:layout_width="56dp"
                            android:layout_height="56dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:src="@drawable/ic_brightness_1_black_24dp"
                                app:tint="@color/aws_green"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </FrameLayout>

                        <TextView
                            android:id="@+id/tv3"
                            android:layout_marginTop="8dp"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/subject_task"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/task_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/fr_card_subject"
                        android:background="?attr/selectableItemBackground"
                        android:focusable="true"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:gravity="center_vertical"
                android:minHeight="56dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:layout_marginStart="32dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:id="@+id/tv_sub_task"
                    android:text="@string/sub_task"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_list_sub_task"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:layout_marginTop="16dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:minHeight="48dp"
                    android:background="@color/aws_blue"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_btn_add_sub_task"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center_vertical"
                        android:text="@string/add_sub_task"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fr_add_sub_task"
                    android:background="?attr/selectableItemBackground"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/div_bottom_nested_scroll_view"
                android:layout_width="0dp"
                android:layout_height="0dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutAppBar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_marginStart="16dp"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_chevron_left"
                app:tint="@color/aws_green" />
        </FrameLayout>

        <FrameLayout
            android:layout_marginEnd="16dp"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/check"
                app:tint="@color/aws_green" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:visibility="gone"
        android:id="@+id/material_elevation"
        android:layout_width="match_parent"
        android:layout_height="2.5dp"
        android:background="@drawable/material_elevation"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutAppBar" />

    <FrameLayout
        android:id="@+id/fr_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>